# meeting-whisperer

./: CLAUDE.md  Cargo.toml  DESIGN_NOTES.md  README.md
patches/cubecl-0.9.0/: .cargo_vcs_info.json  Cargo.toml
src/: audio.rs  config.rs  input.rs  main.rs
src/summarize/: claude_cli.rs  local.rs  mod.rs
src/transcribe/: mod.rs  voxtral_backend.rs  whisper_rs_backend.rs
